Application/inventory-app.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service-deployment
  namespace: dev
spec:
  replicas: 2
  strategy:
      type: Recreate
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
      - name: inventory-service
        image: docker.io/mkbiloniya/inventory-service:v4
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
---

apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: dev
  labels:
    app: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
